Fix labels and rows misalignemnt.
Fix misalignment between labels and rows in the Resouces Status and Thread Status views.

Fixes #433.

--- a/packages/react-components/style/output-components-style.css
+++ b/packages/react-components/style/output-components-style.css
@@ -101,7 +101,6 @@ canvas {
     line-height: 18px;
     position: relative;
     white-space: nowrap;
-    top: 50%;
     padding: 0 0;
 }
 
